--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "generate-pwa-assets": "pwa-assets-generator -p minimal-2023",
     "lint": "eslint .",
     "preview": "vite preview",
     "deploy:clean": "npm run docker -- kill ${NAME}; npm run docker -- rm ${NAME} || true",
@@ -24,20 +25,11 @@
     "@mantine/notifications": "^7.14.3",
     "@tanstack/react-router": "^1.84.2",
     "@tanstack/router": "^0.0.1-beta.53",
-    "axios": "^1.7.8",
-    "body-parser": "^1.20.3",
-    "cheerio": "^1.0.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "langchain": "^0.3.6",
-    "openai": "^4.73.1",
-    "puppeteer": "^23.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "turndown": "^7.2.0",
-    "uuid": "^11.0.3"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@vite-pwa/assets-generator": "^0.2.6",
     "@eslint/js": "^9.15.0",
     "@tanstack/router-devtools": "^1.84.2",
     "@tanstack/router-plugin": "^1.83.1",
@@ -53,6 +45,7 @@
     "postcss-simple-vars": "^7.0.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "vite-plugin-pwa": "^0.21.1"
   }
 }
