--- a/package.json
+++ b/package.json
@@ -19,34 +19,33 @@
     "ssh": "ssh ubuntu@${API_BOX}"
   },
   "dependencies": {
-    "@gfazioli/mantine-flip": "^1.0.23",
-    "@mantine/core": "^8.1.2",
-    "@mantine/hooks": "^8.1.2",
-    "@mantine/notifications": "^8.1.2",
-    "@tanstack/react-router": "^1.84.2",
+    "@gfazioli/mantine-flip": "^2.3.3",
+    "@mantine/core": "^8.2.5",
+    "@mantine/hooks": "^8.2.5",
+    "@mantine/notifications": "^8.2.5",
+    "@tanstack/react-router": "^1.131.25",
     "@tanstack/router": "^0.0.1-beta.53",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-textfit": "^1.1.1"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.15.0",
-    "@tanstack/router-devtools": "^1.84.2",
-    "@tanstack/router-plugin": "^1.83.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@vite-pwa/assets-generator": "^0.2.6",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.15.0",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.14",
-    "globals": "^15.12.0",
-    "postcss": "^8.4.49",
-    "postcss-preset-mantine": "^1.17.0",
+    "@eslint/js": "^9.33.0",
+    "@tanstack/router-devtools": "^1.131.25",
+    "@tanstack/router-plugin": "^1.131.25",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vite-pwa/assets-generator": "^1.0.0",
+    "@vitejs/plugin-react": "^5.0.0",
+    "eslint": "^9.33.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.18.0",
     "postcss-simple-vars": "^7.0.1",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.15.0",
-    "vite": "^6.0.1",
-    "vite-plugin-pwa": "^0.21.1"
+    "typescript": "~5.9.2",
+    "typescript-eslint": "^8.39.1",
+    "vite": "^7.1.2",
+    "vite-plugin-pwa": "^1.0.2"
   }
 }
